feat: target java 21